--- a/TaskManager/TaskManager.vcxproj
+++ b/TaskManager/TaskManager.vcxproj
@@ -146,6 +146,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Sotrudnik.h" />
+    <ClInclude Include="TaskManager.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
