--- a/TaskManager/TaskManager.vcxproj.filters
+++ b/TaskManager/TaskManager.vcxproj.filters
@@ -26,6 +26,9 @@
     <ClInclude Include="Sotrudnik.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="TaskManager.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
